# pte

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  README.md  env.yml  env_dev.yml  environment.yml  environment_dev.yml  pylintrc  pyproject.toml  setup.cfg  tox.ini
.github/actions/setup-venv/: action.yml
.github/workflows/: lint_and_format.yml  main.yml  pylint.yml  tests.yml
doc/: CHANGELOG.md
docs/: CHANGELOG.md
ieeg/: classification.py  emg.py  filetools.py  ieeg_io.py
pte/: __init__.py  main.py  settings.py
pte/decode/: __init__.py  classification.py  decode.py  decode_abc.py  running.py
pte/decoding/: __init__.py  archive.py  decode.py  decode_abc.py  experiment.py  experiment_factory.py  load.py  plot.py  run.py  running.py  timepoint.py
pte/filetools/: __init__.py  bids.py  events.py  filefinder.py  filefinder_abc.py  filereader.py  filereader_abc.py
pte/plot/: _plotly.py
pte/plotting/: __init__.py  coordinates.py  meshplot.py  normalization.py  raw.py
pte/preprocessing/: channels.py  emg.py  preprocessing.py
pte/process/: channels.py  emg.py
pte/processing/: __init__.py  channels.py  emg.py  preprocessing.py
pte/stats/: __init__.py  cluster.py  permutation.py  timeseries.py
pte/time_frequency/: __init__.py  power.py
pynm_decode/: main.py
pynm_decode/decode/: events.py
pynm_decode/filetools/: filereader.py  matlab.py
pynm_decode/plot/: __init__.py
pynm_decode/process/: __init__.py
pynm_decode/stats/: cluster.py
requirements/: requirements.txt  requirements_deploy.txt  requirements_dev.txt
scripts/: prepare_changelog.py  release.sh  release_notes.py
src/pte/: __init__.py  main.py  settings.py
src/pte/filetools/: __init__.py  bids.py  events.py  filefinder.py  filefinder_abc.py  matlab.py
src/pte/pipelines/: __init__.py  pipelines.py
src/pte/plotting/: __init__.py  clusterplot.py  coordinates.py  meshplot.py  raw.py
src/pte/preprocessing/: __init__.py  annotation.py  channels.py  emg.py  preprocessing.py
src/pte/time_frequency/: __init__.py  bursts.py  power.py
tests/: test_import.py
tests/time_frequency/: test_bursts.py
