[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.5,<4"]

[project]
authors = [
  {name = "Richard Köhler"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "PTE is an open-source software package for working with electrophysiological data"
keywords = ["eeg", "ieeg", "dbs", "ecog", "lfp"]
license = {file = "LICENSE.txt"}
maintainers = [
  {name = "Richard Köhler"},
]
name = "pte"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0.dev1"

dependencies = [
  "joblib",
  "matplotlib",
  "mne",
  "mne-bids",
  "numba",
  "numpy",
  "pandas",
  "plotly",
  "pte-stats",
  "scikit-image",
  "scipy",
]

[project.optional-dependencies]
deploy = [
  "flit",
]
dev = [
  "black",
  "isort",
  "mypy",
  "pylint",
  "pytest",
  "pytest-cov",
  "tox",
]

[project.urls]
bugtracker = "https://github.com/richardkoehler/pte/issues"
changelog = "https://github.com/richardkoehler/pte/blob/main/doc/CHANGELOG.md"
repository = "https://github.com/richardkoehler/pte"

[tool.black]
exclude = '''
/(
    __pycache__
  | plotting/resources
)/

'''
include = '''
(
    /tests
  | /src
)
'''
line-length = 79
target-version = ['py310']

[tool.isort]
line_length = 79
profile = "black"
py_version = 310
src_paths = ["src"]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "numba",
  "skimage",
  "statsmodels.stats.multitest",
]
