[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.5,<4"]

[project]
authors = [
  {name = "Richard M. Köhler"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
description = "PTE is an open-source software package for working with electrophysiological data"
dynamic = ["version"]
keywords = ["eeg", "ieeg", "dbs", "ecog", "lfp"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Richard M. Köhler"},
]
name = "pte"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "joblib",
  "matplotlib",
  "mne[hdf5]",
  "mne-bids",
  "numba",
  "numpy",
  "pandas",
  "plotly",
  "pte-stats",
  "pybv",
  "scikit-image",
  "scipy",
  "mne_qt_browser",
  "pyqt5"
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "mypy",
  "pylint",
  "pytest",
  "pytest-cov",
  "tox",
]

[project.urls]
bugtracker = "https://github.com/richardkoehler/pte/issues"
changelog = "https://github.com/richardkoehler/pte/blob/main/doc/CHANGELOG.md"
repository = "https://github.com/richardkoehler/pte"

[tool.black]
exclude = '''
/(
  __pycache__
)/
'''
line-length = 79

[tool.ruff]
line-length = 79

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "numba",
  "skimage",
  "statsmodels.stats.multitest",
]
