[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Richard M. Köhler"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
description = "An open-source software package for working with electrophysiological data"
dynamic = ["version"]
keywords = ["eeg", "ieeg", "dbs", "ecog", "lfp", "neurophysiology"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Richard M. Köhler"},
]
name = "pte"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"

dependencies = [
  "joblib",
  "matplotlib",
  "mne[hdf5]>=1.0",
  "mne-bids",
  "numba",
  "numpy",
  "pandas",
  "plotly",
  "pte-stats",
  "pybv",
  "scikit-image",
  "scipy",
  "mne-qt-browser",
  "pyqt5",
]

[project.optional-dependencies]
dev = [
  "black",
  "hatch",
  "mypy",
  "packaging",
  "pandas-stubs",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
  "tox",
]

[project.urls]
bugtracker = "https://github.com/richardkoehler/pte/issues"
changelog = "https://github.com/richardkoehler/pte/blob/main/docs/CHANGELOG.md"
repository = "https://github.com/richardkoehler/pte"

[tool.black]
line-length = 79

[tool.hatch]
version.path = "src/pte/__init__.py"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "joblib",
  "matplotlib",
  "matplotlib.figure",
  "mne",
  "mne_bids",
  "mne_bids.copyfiles",
  "mne_bids.path",
  "mpl_toolkits.axes_grid1",
  "numba",
  "numpy",
  "plotly",
  "pte_stats",
  "pybv",
  "scipy",
  "scipy.io",
  "scipy.ndimage",
  "scipy.signal",
  "scipy.stats",
  "skimage",
  "statsmodels.stats.multitest",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
