[metadata]
name = pynm_decode
version = 0.0.1

[options]
packages = pynm_decode
install_requires =
    requests
    importlib; python_version == "3.9"
    bayesian-optimization
    catboost
    imbalanced-learn
    joblib
    matplotlib
    mne
    mne-bids
    numba
    numpy
    pandas
    plotly
    scikit-learn
    scipy
    xgboost