[metadata]
name = pte
version = 0.0.1

[options]
packages = pte
python_requires = '>=3.9'
install_requires =
    requests
    bayesian-optimization
    catboost
    filterpy
    imbalanced-learn
    joblib
    matplotlib
    mne
    mne-bids
    numba
    numpy
    pandas
    pip
    plotly
    pybids
    scikit-learn
    scipy
    statannotations
    xgboost